--- a/app/Home.module.css
+++ b/app/Home.module.css
@@ -171,7 +171,7 @@
 .actionButtons {
   display: flex;
   justify-content: center;
-  margin-top: 50px;
+  margin-top: 40px;
   gap: 20px;
 }
 
@@ -260,11 +260,11 @@
 .resetButton {
   background-color: #f1a3bf;
   color: white;
-  padding: 10px 20px;
   border: none;
   border-radius: 20px;
   cursor: pointer;
   text-align: center;
-  font-size: 16px;
+  font-size: 12px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 60px;
 }
