--- a/app/Home.module.css
+++ b/app/Home.module.css
@@ -264,7 +264,8 @@
   border-radius: 20px;
   cursor: pointer;
   text-align: center;
-  font-size: 12px;
+  font-size: 14px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   width: 70px;
+  white-space: nowrap; /* 추가된 속성 */
 }
