--- a/app/Home.module.css
+++ b/app/Home.module.css
@@ -279,9 +279,18 @@
   background-color: #f9f9f9;
   padding: 15px;
   border-radius: 8px;
-  margin: 30px 0;
+  margin-top: 30px;
   font-size: 16px;
   color: #333;
   text-align: left;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.additionalInfo {
+  font-size: 12px;
+  color: #888;
+  margin-top: 10px;
+  text-align: left;
+  max-width: 300px;
+  margin-left: 5px;
 }
