--- a/app/Home.module.css
+++ b/app/Home.module.css
@@ -11,8 +11,16 @@
   margin-bottom: 20px;
   position: relative;
 }
-
+.reportButton img {
+  width: 24px;
+  height: 24px;
+  filter: invert(1); /* 색상을 반전시켜 흰색으로 변환 */
+}
 .header {
+  position: relative;
+  display: flex;
+  justify-content: center; /* 수평 중앙 정렬 */
+  align-items: center; /* 수직 중앙 정렬 */
   font-family: Arial, sans-serif;
   margin: 0 auto;
   max-width: 320px;
@@ -26,6 +34,51 @@
   font-size: 20px;
   font-weight: 600;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.header .title {
+  flex: 1; /* 남은 공간을 차지하여 중앙 정렬 */
+  text-align: center;
+  margin: 0;
+}
+
+.header .reportButton {
+  position: absolute; /* 절대 위치로 오른쪽 정렬 */
+  right: 20px; /* 오른쪽 끝에서 약간의 여백 */
+  top: 50%; /* 수직 중앙에 맞춤 */
+  transform: translateY(-50%); /* 수직 중앙 정렬 */
+  cursor: pointer;
+  font-size: 12px; /* 텍스트 크기 조정 */
+}
+
+.menuButton {
+  font-size: 24px;
+  cursor: pointer;
+}
+.dropdownMenu {
+  position: absolute;
+  top: 50px;
+  right: 10px;
+  background-color: white;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  overflow: hidden;
+  z-index: 1000; /* 가장 앞에 나오도록 z-index 추가 */
+}
+
+.menuItem {
+  padding: 10px;
+  cursor: pointer;
+  border-bottom: 1px solid #f0f0f0;
+  color: #000000;
+}
+
+.menuItem:last-child {
+  border-bottom: none;
+}
+
+.menuItem:hover {
+  background-color: #f8f8f8;
 }
 
 .title {
@@ -293,4 +346,17 @@
   text-align: left;
   max-width: 300px;
   margin-left: 5px;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  background-color: #f1a3bf;
+  color: white;
+  padding: 15px;
+  border-radius: 15px;
+  font-size: 16px;
+  font-weight: 700; /* Bold */
+  max-width: 320px;
+  margin: 0 auto;
 }
