--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,7 @@
 html,
 body {
   height: 100%;
+  max-height: 2000px;
   margin: 0;
   padding: 0;
   overflow: auto; /* 오버플로우로 인해 스크롤이 생기지 않도록 방지 */
