--- a/app/t/Home.module.css
+++ b/app/t/Home.module.css
@@ -1,7 +1,8 @@
 /* Home.module.css */
 
 .container {
-  max-width: 320px;
+  max-width: 345px;
+
   margin: 0 auto;
   padding: 20px;
   font-family: Arial, sans-serif;
@@ -9,8 +10,8 @@
   border-radius: 15px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin-bottom: 20px;
-
   position: relative;
+  background-color: white;
 }
 .reportButton img {
   width: 24px;
@@ -100,25 +101,21 @@
 
 .mealButton {
   flex: 1;
-  background-color: #f1a3bf;
+  background-color: white;
   border: none;
   padding: 10px;
   cursor: pointer;
   border-radius: 20px;
   margin: 0 5px;
   transition: background-color 0.3s ease;
-  color: white;
+  color: gray;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   font-size: 14px;
   font-weight: 500;
 }
 
-.mealButton:hover {
-  background-color: #f1a3bf;
-}
-
 .mealButton.activeMeal {
-  background-color: #ff6f91;
+  background-color: #f1a3bf;
   color: white;
 }
 
@@ -128,8 +125,8 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  width: 275px;
-  height: 275px;
+  width: 290px;
+  height: 290px;
   border: 2px solid #f1a3bf;
   border-radius: 15px;
   overflow: hidden;
@@ -160,8 +157,8 @@
 
 .imagePreview {
   margin: 0 auto;
-  width: 275px;
-  height: 275px;
+  width: 290px;
+  height: 290px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -183,7 +180,7 @@
 
 .textarea {
   width: 100%;
-  max-width: 285px;
+  max-width: 295px;
   height: 60px;
   padding: 10px;
   border: 2px solid #f1a3bf;
@@ -368,7 +365,8 @@
   border-radius: 15px;
   font-size: 16px;
   font-weight: 700; /* Bold */
-  max-width: 320px;
+  max-width: 345px;
   margin: 0 auto;
   margin-top: 15px;
+  background-color: white;
 }
